<resources>
    <string name="app_name">X Scanner</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_docs">Docs</string>

    <string name="new_user">Sign up to turn your docs digital</string>
    <string name="register_instead">No Account? Register :).</string>
    <string name="login_instead">You want to login?</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--    for the forms:-->
    <string name="login">Sign in</string>

    <string name="email_hint">Sign in</string>
    <string name="password_hint">Sign in</string>
    <string name="register">Sign Up</string>

    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>

<!--    they may change in time:-->
    <string name="app_headline">Keep your docs at your fingertips.</string>
    <string name="login_button">Log into your Account</string>
    <string name="register_button">Or create a new account</string>
    <string name="dash_message">This is your Dash</string>
    <string name="docs_message">There are your docs</string>

</resources>
